examples/test/testpolicy12124.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12124
  namespace: namespace43
spec:
  podSelector:
    matchLabels:
      key41: value30
      key45: value7
      key43: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value20
      podSelector:
        matchLabels:
          key1: value33
